# collect

./:  docker-compose.yml  README.md  client_base.py  collect_core.py  collect_utils.py  collectors_container.py  data_models.py  ex.html  main.py  pyproject.toml  timestamp_format.py  type-test.py
collectors/: __init__.py
collectors/bybit/: __init__.py  candles.py  categories.py  client.py  error.py  instruments.py  meta.py  meta_opt.py  q.py  smoke_test.py
core/: collect_core.py  collect_utils.py  collectors_container.py  data_models.py  request_base.py
send/: __init__.py  send_to_kafka.py
